fix (admin): fix label overflow

--- a/client/pages/adminpage.scss
+++ b/client/pages/adminpage.scss
@@ -48,6 +48,9 @@
                     .nothing{ display: none; }
                 }
                 > span{
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                     display: inline-block;
                     line-height: 30px;
                     min-width: 150px;
